[package]
name = "wq-zed"
description = "CQL (Cassandra Query Language) preview tool for Zed"
version = "1.0.0"
authors = ["アクゼスティア <akzestia@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["cql", "preview", "syntax"]
categories = ["text-editors", "command-line-utilities"]
repository = "https://github.com/Akzestia/wq"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
scylla = "1.4.0"
tokio = { version = "1.48.0", features = ["full"] }
